# Assignment

./: .gitignore  WORKSPACE_DATABASE_SETUP.md
gemnar-website/: .cursorrules  .flake8  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  README.md  build.sh  manage.py  pyproject.toml  render.yaml  requirements.txt  run.sh  run_tweets.sh  test_post_to_reddit.py
gemnar-website/.github/: copilot-instructions.md
gemnar-website/ansible/: ansible.cfg  deploy.sh  fix_db.yml  migrate.sh  migrate.yml  nginx-http.conf.j2  nginx.conf.j2  playbook.yml  quick-deploy.sh  reboot.sh  reboot.yml  restart_uvicorn.sh  simple_test.yml  ssh.sh  test_site.yml  uvicorn.service.j2
gemnar-website/chat/: admin.py  api_views.py  auth_middleware.py  consumers.py  context_processors.py  encryption.py  models.py  routing.py  serializers.py  urls.py  views.py
gemnar-website/docs/: AI_CREDITS_SYSTEM.md  new-architecture-plan.md  task-management-frontend.md
gemnar-website/gemnar/: asgi.py  settings.py  urls.py  wsgi.py
gemnar-website/scripts/: add_publishing_schema.py  fix_sites_migration.py  fix_workspace_slugs.py  instagram_test.py  instagram_test.sh  test_tweet.py  test_webhook.py
gemnar-website/templates/: 404.html  500.html  landing_new.html
gemnar-website/website/: admin.py  analytics_api.py  analytics_models.py  analytics_views.py  api_credit_views.py  api_views.py  apps.py  cloud_storage_models.py  context_processors.py  crm_views.py  forms.py  kling_utils.py  models.py  organization_urls.py  organization_views.py  serializers.py  signals.py  social.py  tests.py  (+19 more)
(+622 files in other folders)
