[tool.poetry]
name = "gemnar-website"
version = "0.1.0"
description = "Gemnar - enabling regular people to become expert marketers using AI, automation and industry smarts"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
websockets = "^15.0.1"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "4.7.0"
dj-rest-auth = "^7.0.1"
stripe = "^7.8.0"
requests = "^2.32.0"
sentry-sdk = {extras = ["django"], version = "^2.30.0"}
psycopg2-binary = "^2.9.0"
pillow = "^10.0.0"
psutil = "^7.0.0"
channels = "^4.2.2"
django-organizations = "^2.5.0"
openai = "^2.8.1"
tweepy = "^4.14.0"
celery = "^5.3.6"
redis = "^5.0.1"
cryptography = "^41.0.0"
dnspython = "^2.4.2"
django-allauth = "^65.10.0"
beautifulsoup4 = "^4.12.0"
praw = "^7.8.1"
cloudinary = "^1.41.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.11.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 